--- a/styles/style.css
+++ b/styles/style.css
@@ -165,13 +165,6 @@ input[type=checkbox] {
     margin-bottom: 0.5em;
 }
 
-.hero-svg {
-    position: relative;
-    left: 0;
-    right: 0;
-    width: 100%;
-}
-
 @media(max-width: 768px) {
     .hero-title {
         font-size: 1.5rem;
@@ -179,10 +172,6 @@ input[type=checkbox] {
 
     .hero-description {
         display: none;
-    }
-
-    .hero-svg {
-        position: relative;
     }
 }
 
@@ -243,9 +232,9 @@ footer {
     background-color: var(--primary-color);
     color: var(--text-on-primary-color);
     text-align: center;
-    position: relative;
-    left: 0;
+    position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
 }
 
