--- a/styles/style.css
+++ b/styles/style.css
@@ -232,9 +232,9 @@ footer {
     background-color: var(--primary-color);
     color: var(--text-on-primary-color);
     text-align: center;
-    position: fixed;
-    bottom: 0;
+    position: absolute;
     left: 0;
+    bottom: 0;
     width: 100%;
 }
 
