--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -43,7 +43,7 @@
     .section-title {
         font-size: 1.5rem;
     }
-    
+
     .section-content {
         padding: 2rem;
     }
@@ -65,7 +65,7 @@
     width: 50%;
 }
 
-.mx-auto  {
+.mx-auto {
     margin-left: auto;
     margin-right: auto;
 }
@@ -78,4 +78,8 @@
     position: fixed;
     top: 0;
     width: 100%;
+}
+
+.anchor-link {
+    scroll-margin-top: 16rem;
 }
