--- a/styles/components.css
+++ b/styles/components.css
@@ -12,6 +12,7 @@
 
 .primary-button {
     background-color: var(--primary-color);
+    color: var(--text-on-primary-color) !important;
 }
 
 .primary-button:hover {
